# chess-analyzer

./: .gitignore  BOARD_FIX_NOTES.md  LICENSE  MANIFEST.in  README.md  SETUP_INSTRUCTIONS.md  app.py  config.py  install.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
assets/css/: chessground.css  style.css
assets/js/: chessboard.js
chess_analyzer/: __main__.py  analysis.py  cli.py  db.py  engine.py  fetcher.py  opening.py  server.py
chess_analyzer/static/: app.js  index.html  style.css
e2e/: app.spec.js
templates/: analysis.html  analysis_chessground_backup.html  analysis_new.html  base.html  error.html  home.html  index.html  login.html  mastered.html  register.html  results.html  train.html  upload.html
tests/: support.py  test_analysis.py  test_api.py  test_batched_analysis.py  test_logs.py  test_sync.py
utils/: __init__.py  analysis.py  database.py  stockfish.py  validation.py
